--- a/amvera.yml
+++ b/amvera.yml
@@ -9,6 +9,6 @@ build:
   useCache: true
 run:
   persistenceMount: /data
-  containerPort: 8000
-  command: python manage.py runserver
+  containerPort: 80
+  command: python manage.py runserver 0.0.0.0:80
 serviceType: compute
